cicd/service_old.yml
apiVersion: v1
kind: Service
metadata:
  name: old-service
spec:
  selector:
    type: app
    ver: old
  ports:
  ports:
  - port: 8080
    targetPort: 8080
