cicd/ingress_new.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: new-service
            port:
              number: 8080
